# klio-fun

./: .env.example  .env.production  .gitignore  Anchor.toml  BRAND-GUIDE.md  DEPLOYMENT-GUIDE.md  LAUNCH-PACKAGE.md  PRODUCTION-DEPLOYMENT.md  README.md  deployment-config.json  deployment-info.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/: globals.css  layout.tsx  metadata.ts  page.tsx
app/api/health/: route.ts
app/api/portfolio/[address]/: route.ts
app/api/predictions/: route.ts
app/api/predictions/[id]/: route.ts
app/api/trades/: route.ts
components/: CreatePredictionModal.tsx  DebugPanel.tsx  Header.tsx  Legal.tsx  LoadingScreen.tsx  PayoutExplainer.tsx  Portfolio.tsx  PredictionCard.tsx  Token.tsx  TradeRecords.tsx  WalletButton.tsx  WalletProvider.tsx
docs/: PAYOUT_SYSTEM.md
hooks/: usePredictions.ts  useTrading.ts
lib/: anchor-client.ts  anchor-client.ts.bak  anchor-program.ts  database.ts  realtime.ts
lib/idl/: fate_fun.json
lib/types/: fate_fun.ts
programs/fate-fun/: Cargo.toml
programs/fate-fun/src/: lib.rs
scripts/: build-production.sh  demo-deploy.sh  deploy-vercel.sh  deploy.ts  setup-production.sh
