[package]
name = "fate-fun"
version = "0.1.0"
description = "Klio.fun - Trade What You Believe"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fate_fun"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"